--- a/com.roumanoff.debug.sourceprovider/build.properties
+++ b/com.roumanoff.debug.sourceprovider/build.properties
@@ -2,4 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               icons/
+src.includes = src/,\
+               plugin.xml,\
+               META-INF/
