--- a/com.roumanoff.debug.sourceprovider/pom.xml
+++ b/com.roumanoff.debug.sourceprovider/pom.xml
@@ -12,6 +12,10 @@
 
 	<build>
 		<plugins>
+		<plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.0-beta-8</version>
+        </plugin>
 			<plugin>
 				<groupId>org.codehaus.tycho</groupId>
 				<artifactId>maven-osgi-compiler-plugin</artifactId>
