--- a/com.roumanoff.debug.sourceprovider/pom.xml
+++ b/com.roumanoff.debug.sourceprovider/pom.xml
@@ -1,20 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project>
+﻿<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.roumanoff.rcp</groupId>
 	<artifactId>com.roumanoff.debug.sourceprovider</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>eclipse-plugin</packaging>
 	<name>Reveal</name>
 	<scm>
-			<connection>scm:svn:http://rcprevealsourceprovider.googlecode.com/svn/trunk/rcprevealsourceprovider/com.roumanoff.debug.sourceprovider</connection>
+			<connection>scm:svn:http://rcprevealsourceprovider.googlecode.com/svn/tags/com.roumanoff.debug.sourceprovider-1.0.0</connection>
 	</scm>
 
 	<build>
 		<plugins>
 		<plugin>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.0-beta-7</version>
+        <version>2.0-beta-5</version>
         </plugin>
 			<plugin>
 				<groupId>org.codehaus.tycho</groupId>
